# SciMesh

./: .gitignore  AGENTS.md  PLAN.md  README.md  STATUS.md  molmesh.py  pyproject.toml  requirements.txt  scimesh.py
.agents/: coordinator.md  integration.md  reviewer.md  worker.md  workloads.md
.github/workflows/: coordinator.yml  python.yml
coordinator/: .dockerignore  .env.example  .gitignore  .golangci.yml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
coordinator/api/: requests.http
coordinator/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_workers.down.sql  0002_workers.up.sql  0003_artifacts.down.sql  0003_artifacts.up.sql  0004_result_artifact.down.sql  0004_result_artifact.up.sql  0005_uploaded_input.down.sql  0005_uploaded_input.up.sql  0006_task_running_enum.down.sql  0006_task_running_enum.up.sql  0007_task_running_lease.down.sql  0007_task_running_lease.up.sql  0008_artifact_attempt.down.sql  0008_artifact_attempt.up.sql  0009_unique_partial_result_attempt.down.sql  (+3 more)
docs/: api-contract.md  artifact-preview-task.md  building-workers.md  ctx-07-distributed-workload-protocol.md  database-integration-task.md  openapi.yaml  swagger-initializer.js  user-space-task.md  web-interface-plan.md  worker-agent-brief.md  worker-daemon-task.md  worker-vibecoder-feedback.md
scimesh/: __init__.py  cli.py
scripts/: two-worker-smoke.sh
tests/: conftest.py  test_cli_help.py  test_distributed.py  test_distributed_similarity_search.py  test_similarity_graph.py  test_similarity_search.py  test_worker_daemon.py
(+86 files in other folders)
