[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scimesh"
version = "0.1.0"
description = "Local scientific workloads for molecular similarity analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rdkit>=2024.3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
scimesh = "scimesh.cli:main"

[tool.setuptools.packages.find]
include = ["scimesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
